2007-05-03  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added nemiver module. Fixes #435568.

2007-05-03  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: Track HEAD for glib and gtk+ for 2.20.

2007-05-03  Claude Paroz  <claude@2xlibre.net>

	* view-module.py: Do not show 100% when not all strings are
	translated.
	Sort by translated strings instead of supportedness.

2007-05-02  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branched gnome-panel, gnome-desktop, 
	gnome-session and gnome-menus for 2.18.

2007-04-30  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branched libwnck and zenity for 2.18.

2007-04-28  Claude Paroz  <claude@2xlibre.net>

	* templates/module.tmpl: Corrected display bug by adding silent
	directive.  

2007-04-28  Claude Paroz  <claude@2xlibre.net>

	* templates/module.tmpl: Sort branches and add links to branches in
	the header.

2007-04-28  Claude Paroz  <claude@2xlibre.net>

	* releases.py: Create two separate lists of releases.
	* releases.xml.in: Added status property to release tag.
	* templates/list-releases.tmpl: Display separately official and
	unofficial relseases.

2007-04-27  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Added gnome-games manuals ported to g-d-u.
	* releases.xml.in: libgtop branched for 2.14.

2007-04-27  Vladimer Sichinava  <vsichi@gnome.org>

	* people.xml.in changed Georgian section.

2007-04-23  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: Added gnome-2-18 branch also for 2.14 and 2.16
	release of gnome-volume-manager.

2007-04-23  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-volume-manager, nautilus-cd-burner,
	gnome-screensaver branched for 2.18.
	gnome-devel-docs added to proposed modules for 2.20.

2007-04-22  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-doc-utils branched for 2.18.
