@@ -157,6 +157,11 @@
     <email>asprayama@yahoo.com</email>
   </person>
   <!-- as translation coordinator -->
+  <person id="amitakhya">
+    <name>Amitakhya Phukan</name>
+    <email>amitakhya.phukan@gmail.com</email>
+  </person>
+  <!-- former as translation coordinator -->
   <person id="x-suranampatir">
     <name>Sunaram Patir</name>
     <email>lkpatir@yahoo.co.in</email>
