@@ -36,7 +36,7 @@
   </team>
   <team id="as">
     <_language id="as">Assamese</_language>
-    <coordinator id="x-suranampatir"/>
+    <coordinator id="amitakhya"/>
   </team>
   <team id="ast">
     <_language id="ast">Asturian</_language>
