@@ -1,3 +1,8 @@
+2007-05-04  Claude Paroz  <claude@2xlibre.net>
+
+	* people.xml.in:
+	* translation-teams.xml.in: New Assamese translation coordinator.
+
 2007-05-03  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
